--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,24 @@
 @tailwind base;
 @tailwind components;
+.text-shadow {
+  text-shadow: 2px 2px  #393D3f;
+}
+.text-shadow-md {
+  text-shadow: 4px 4px 8px black;
+}
+.text-shadow-lg {
+  text-shadow: 15px 15px 30px black;
+}
+.text-shadow-none {
+  text-shadow: none;
+}
 @tailwind utilities;
 
-@layer utilities {
-  .text-shadow {
-    text-shadow: 0 2px 4px rgba(0,0,0,0.10);
-  }
 
-  .text-shadow-md {
-    text-shadow: 0 4px 8px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.08);
-  }
+   
+      
+  
 
-  .text-shadow-lg {
-    text-shadow: 0 15px 30px rgba(0,0,0,0.11), 0 5px 15px rgba(0,0,0,0.08);
-  }
-
-  .text-shadow-none {
-    text-shadow: none;
-  }
-}
 
 html,
 body {
